Fix post preview header pixel jump

--- a/ghost/admin/app/styles/layouts/post-preview.css
+++ b/ghost/admin/app/styles/layouts/post-preview.css
@@ -7,6 +7,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-shrink: 0;
     min-height: 72px;
     overflow: hidden;
     margin: 0;
